--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "gif.js": "^0.2.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1"
+    "react-scripts": "5.0.1"
+  },
+  "optionalDependencies": {
+    "react-router-dom": "^6.14.1"
   },
   "browserslist": {
     "production": [
